# libtermux-android

./: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  gradlew  header.txt  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
core/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
core/src/main/: AndroidManifest.xml
core/src/main/jni/: CMakeLists.txt  process_helper.cpp  pty_helper.cpp  termux_jni.cpp
core/src/main/kotlin/com/libtermux/: LibTermux.kt  TermuxConfig.kt
core/src/main/kotlin/com/libtermux/bootstrap/: BootstrapInstaller.kt
core/src/main/kotlin/com/libtermux/bridge/: TermuxBridge.kt
core/src/main/kotlin/com/libtermux/executor/: CommandExecutor.kt  ExecutionResult.kt  SessionManager.kt
core/src/main/kotlin/com/libtermux/fs/: VirtualFileSystem.kt
core/src/main/kotlin/com/libtermux/initializer/: BuildConfig.kt  LibTermuxInitializer.kt
core/src/main/kotlin/com/libtermux/os/: RootUtils.kt
core/src/test/kotlin/com/libtermux/: ExecutionResultTest.kt  PackageManagerTest.kt  TermuxConfigTest.kt  VirtualFileSystemTest.kt
docs/: index.html
gradle/: libs.versions.toml
os/: build.gradle.kts  consumer-rules.pro
os/src/main/: AndroidManifest.xml
sample/: build.gradle.kts
sample/src/main/: AndroidManifest.xml
sample/src/main/res/layout/: activity_main.xml
sample/src/main/res/values/: colors.xml  strings.xml  themes.xml
scripts/: publish_local.sh  setup_dev.sh
shizuku/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
terminal-view/: build.gradle.kts
(+32 files in other folders)
